# resource_retriever

./: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
include/resource_retriever/: retriever.h
libcurl_vendor/: CHANGELOG.rst  CMakeLists.txt  libcurl_vendor-extras.cmake.in  libcurl_vendorConfig.cmake.in  package.xml
libcurl_vendor/env_hook/: libcurl_vendor_library_path.bat
resource_retriever/: CHANGELOG.rst  CMakeLists.txt  find_libcurl-extras.cmake  package.xml
resource_retriever/include/resource_retriever/: retriever.h  retriever.hpp
resource_retriever/src/: retriever.cpp
resource_retriever/src/resource_retriever/: __init__.py
resource_retriever/test/: CMakeLists.txt  test.cpp  test.py
src/: retriever.cpp
src/resource_retriever/: __init__.py
test/: CMakeLists.txt  test.cpp  test.py
