<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>libcurl_vendor</name>
  <version>3.4.0</version>
  <description>
    Wrapper around libcurl, it provides a fixed CMake module and an ExternalProject build of it.
  </description>

  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</maintainer>

  <license>Apache License 2.0</license>  <!-- the contents of this package are Apache 2.0 -->
  <!-- https://curl.haxx.se/docs/copyright.html -->
  <license>MIT</license>  <!-- libcurl is "MIT style" -->

  <author email="william@osrfoundation.org">William Woodall</author>

  <url type="website">https://github.com/curl/curl</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>

  <buildtool_export_depend>pkg-config</buildtool_export_depend>

  <build_depend>file</build_depend>

  <depend>curl</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
